examples/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example-php-app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: example-php-app
