examples/kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-php-app
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: example-php-app
          servicePort: http
